# raytracing

./: .clang-format  CMakeLists.txt  README.md  color.h  main.cc  vec3.h
